[package]
name = "null-vps-panel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = "0.20"
ssh2 = "0.9"
async-ssh2-tokio = "0.8"
lettre = "0.11"
cloud-storage = "0.11"
config = "0.14"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.22"
aes = "0.8"
rand = "0.8"
qrcode = "0.14"
image = "0.24"
totp-lite = "2.0"
